--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.7",
-    "svg-inline-loader": "^0.8.2",
+    "raw-loader": "^4.0.2",
     "vue-loader": "^16.1.2",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0"
